ready for apple

--- a/privacy.html
+++ b/privacy.html
@@ -141,13 +141,10 @@
     <p>SkySniffer provides AI-powered analysis for educational and informational purposes only. Results should not be considered definitive scientific conclusions. The app is designed for entertainment and learning about atmospheric phenomena.</p>
 
     <h2>Contact Information</h2>
-    <div class="warning">
-        <strong>⚠️ BEFORE PUBLISHING:</strong> Replace the bracketed placeholders below with your actual contact information!
-    </div>
     <p>For privacy questions or concerns:</p>
     <ul>
-        <li><strong>Email:</strong> [YOUR EMAIL HERE - REQUIRED FOR APP STORE]</li>
-        <li><strong>Support:</strong> [YOUR SUPPORT URL - can be email or website]</li>
+        <li><strong>Email:</strong> <a href="mailto:schmidlkoferbusiness@gmail.com">schmidlkoferbusiness@gmail.com</a></li>
+        <li><strong>Support:</strong> <a href="https://github.com/maddox05/skysniffer/issues">https://github.com/maddox05/skysniffer/issues</a></li>
     </ul>
 
     <h2>Data Deletion</h2>
